# sony-camera-api

./: CMakeLists.txt
examples/: CMakeLists.txt  example2.cpp  example4.cpp  logger.cpp  select_server.cpp  test_camera.cpp
include/: camera_methods.h
